# pecd-replication

./: .gitignore  Makefile  README.md  config.json  contribution_conventions.md  dvc.yaml  index.html  index.json  myst.search.json  myst.xref.json  notebooks.analyse-example.json  notebooks.analyse-wind-onshore-full-year.json  notebooks.compare-all-approaches.json  notebooks.extrapolate-wind-to-hub-height.json  notebooks.replicate-wind-bias-correction.json  notebooks.replicate-wind-onshore-capacity-factor.json  objects.inv  pyproject.toml  sitemap.xml
book/: myst.yml
pecdr/: capacity_weighting.py  cds.py  domain.py  era5.py  full_year.py  grid.py  hub_height.py  paths.py  pecd_io.py  peon_zones.py  physics.py  plant_model.py  power_curve.py  shutdown.py  smard.py  wind_bias.py
pipeline/: 01_download_example.py  01_download_pecd_wind_bias_reference.py  02_analyse_example.py  02_download_pecd_wind_speed_snapshots.py  03_download_era5_wind_snapshots.py  04_replicate_wind_bias_correction.py  05_extrapolate_wind_to_hub_height.py  06_download_pecd_masks.py  07_download_pecd_peon_capacity_factor.py  08_build_wind_onshore_plant_panel.py  09_replicate_wind_onshore_capacity_factor.py  10_compute_wind_onshore_full_year.py  11_analyse_wind_onshore_full_year.py  12_compare_all_approaches.py  13_download_smard.py  14_build_target_panel.py  15_download_era5_full_period.py  16_download_pecd_capacity_factors.py  17_process_pecd_capacity_factors.py  18_download_pecd_temperature.py  19_process_pecd_temperature.py  20_process_era5_capacity_factors.py  _strip_jupytext_metadata.py  (+1 more)
(+12 files in other folders)
