[project]
name = "pecd-replication"
version = "0.1.0"
description = "Research project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # pipeline infrastructure — required by the template itself
    "dvc>=3.55.0",
    "ipykernel>=6.29.0",
    "jupytext>=1.19.0",
    "mystmd>=1.8.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.0",
    # add your project-specific analysis packages below, e.g.:
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pecdr"]
